# poetry

./: .gitignore  README.md  app.py  pyproject.toml
src/news_poetry/: crew.py  main.py
src/news_poetry/config/: agents.yaml  tasks.yaml
