[project]
name = "news_poetry"
version = "0.1.0"
description = "news-poetry using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
news_poetry = "news_poetry.main:run"
run_crew = "news_poetry.main:run"
train = "news_poetry.main:train"
replay = "news_poetry.main:replay"
test = "news_poetry.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
